polished up work more to standards of instruction

--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html>
-<head>
-    
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Wireframe Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header><p>header</p></header>
+    <nav>
+      <p>nav</p>
+    </nav>
+    <section>
+      <heading><p>section</p> </heading>
 
-<body>
-    <header>header</header>
-    <nav>nav</nav>
-    <section class="full">section
-        <article class="container">article
-            <h1>h1,h2,h3</h1>
-            <p>p</p>
-        </article>
+      <article>
+        <heading>article</heading>
+        <h1>h1,h2,h3</h1>
+        <p>p</p>
+      </article>
     </section>
-    <aside>aside</aside>
-    <footer>footer</footer>
-
-</body>
+    <aside>
+      <heading> <p>aside</p> </heading>
+    </aside>
+    <div class="clear"></div>
+    <footer>
+      <p>footer</p>
+    </footer>
+  </body>
 </html>
