--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header><p>header</p></header>
+    <header>
+      <p>header</p>
+    </header>
     <nav>
       <p>nav</p>
     </nav>
     <section>
-      <heading><p>section</p> </heading>
-
+      <heading>
+        <p>section</p>
+      </heading>
       <article>
         <heading>article</heading>
         <h1>h1,h2,h3</h1>
@@ -21,7 +24,9 @@
       </article>
     </section>
     <aside>
-      <heading> <p>aside</p> </heading>
+      <heading>
+        <p>aside</p>
+      </heading>
     </aside>
     <div class="clear"></div>
     <footer>
